[tool.poetry]
name = "aiml_troubleshooting"
version = "0.1.0"
description = ""
authors = ["yasamansamiee <yasaman.samiee@acceptto.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
# kuberspatiotemporal = {git = "https://github.com/acceptto-corp/kuberspatiotemporal.git", branch = "lazy_learning_rebased" }
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
